fixed header-menu and header-items(added float, text-align)

--- a/css/style.css
+++ b/css/style.css
@@ -32,21 +32,23 @@ html {
     line-height: 48px;
 }
 .header__items:nth-child(2) {
-    position: absolute;
+    display: inline-block;
+    position: relative;
     right: 81px;
-    top: 43px;
+    float: right;
 }
 .header__items:nth-child(2):hover {
+    display: inline-block;
     transform: scale(1.2);
     cursor: auto;
-    position: absolute;
     background-color: #9BA9B9;
     border-radius: 70%;
     transition: 1.1s;
 }
 .header__items:nth-child(3) {
     display: block;
-    left: 555px;
+    /*left: 555px;*/
+    text-align: center;
     top: 267px;
     position: relative;
     color: #60606e;
@@ -57,7 +59,8 @@ html {
 }
 .header__items:nth-child(4) {
     display: block;
-    margin-left: 596px;
+   /* margin-left: 596px;*/
+    text-align: center;
     margin-top: 260px;
     margin-bottom: 165px;
     position: relative;
